--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
   <div align="center">
     <h1>Congratulations!</h1>
-    <h2>Testing the code deploy throguh Code pipeline</h2>
+    <h2>DevOps through Pipeline</h2>
     <p>For next steps, read the AWS CodePipeline Documentation.</p>
   </div>
 </body>
