--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div align="center">
     <h1>Congratulations!</h1>
     <h2>Test for devops Demo</h2>
-    <p>For next steps, read the AWS CodePipeline Documentation.</p>
+    <p>For next steps, read the AWS CodePipeline Documentation with Bean stack, cloudformation, Python Boto,Terraform</p>
   </div>
 </body>
 </html>
