--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div align="center">
     <h1>Congratulations!</h1>
     <h2>DevOps through Pipeline</h2>
-    <p>xxxxxxxxline Documentation.</p>
+    <p>Zcard Documentation.</p>
   </div>
 </body>
 </html>
