--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
   <div align="center">
     <h1>Congratulations!</h1>
-    <h2>Test for devops Demo</h2>
+    <h2>Test for Zcard app devops Demo</h2>
     <p>For next steps, read the AWS CodePipeline Documentation with Bean stack, cloudformation, Python Boto,Terraform</p>
   </div>
 </body>
