--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 <body>
   <div align="center">
     <h1>Congratulations!</h1>
-    <h2>DevOps through Pipeline</h2>
-    <p>Xcard release : rel.1.0-rc2</p>
+    <h2>DevOps through AWS Pipeline</h2>
+    <p>CAFE Example application</p>
   </div>
 </body>
 </html>
