--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div align="center">
     <h1>Congratulations!</h1>
     <h2>DevOps through AWS Pipeline</h2>
-    <p>CAFE Example application</p>
+    <p>my shopping cart Example application</p>
   </div>
 </body>
 </html>
